# pyrimal

./: .gitignore  flake.nix  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-tree-simplification-fix/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-physo-adapter/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: circle_0_01_noise.csv
data/zhong/: clean_csv.py  noise_data.py
data/zhong/f01/: f01.csv  (+6 more)
examples/gplearn/: circle_data.csv  gplearn_basic-Copy1.ipynb  gplearn_basic.ipynb  gplearn_basic.py  gplearn_basic_og.ipynb
experiments/: example_experiment.yaml  gplearn_experiment.py  gplearn_header.yaml  gplearn_wide_search.yaml  physo_all_search.yaml  physo_experiment.py  zhong_noiseless_f1.yaml  zhong_noiseless_f1_small.yaml
experiments/scripts/: gen_data.py  generate_parameter_search.py
notebooks/: nb_gplearn.ipynb  vis_results.ipynb
scripts/: test_kl.py  validate_physo.py
src/primel/: distributions.py  early_stopping.py  fitness.py  patch_kde.py  run.py  samplers.py  tree.py
tests/: test_distributions.py  test_fitness.py  test_samplers.py  test_tree.py
tests/adapters/: test_gplearn.py  test_physo.py
(+161 files in other folders)
