[project]
name = "primel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"numpy>=2.3.3",
	"scipy>=1.16.1",
	"pandas>=2.3.2",
	"scikit-learn>=1.7.2",
	"matplotlib>=3.10.6",
	"seaborn>=0.13.2",
	"jernerics",
]

[project.optional-dependencies]
gplearn = ["gplearn>=0.4.2"]

adapters = [
	"primel[gplearn]",
]

dev = [
    "jupyterlab>=4.4.9",
    "jupyterlab-lsp>=5.2.0",
    "jupyterlab-vim>=4.1.4",
    "notebook-intelligence>=2.4.2",
    "pytest>=8.4.2",
    "python-lsp-server>=1.13.1",
    "ruff>=0.13.0",
]

[tool.uv.sources]
jernerics = { git = "https://github.com/jerrydzhang/jernerics.git" }

[dependency-groups]
dev = [
    "ty>=0.0.19",
]
